<?xml version="1.0"?>
<package format="2">
  <name>basic_sensor_handler_pkg</name>
  <version>0.0.0</version>
    <description>
    ROS package containing perception nodes for LiDAR and camera processing
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <!-- Other tools can request additional information from this package -->
  </export>
</package>